--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,10 @@ services:
         build: .
         ports:
             - 3003:3003
+        depends_on: 
+            - dataBaseGolang
+        networks: 
+            - default     
         volumes: 
             - .:/go/src/app    
 
